[package]
name = "crufst"
version = "0.1.0"
edition = "2021"
authors = ["Nv7"]
description = "Multiplayer connect four in Rust!"
license = "MIT"
repository = "https://github.com/Nv7-Github/crufst"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = { version = "3.1.18", features = ["derive"] }
eventsource = "0.5.0"
