[package]
name = "crufst"
version = "0.0.0"
edition = "2021"
authors = ["Nv7"]
description = "A database engine in Rust!"
license = "MIT"
repository = "https://github.com/Nv7-Github/crufst"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
